nginx-controller/default-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
        - name: simple-webapp
          image: kodekloud/ecommerce:404
          ports:
            - containerPort: 8080
              protocol: TCP
