nginx-controller/video-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-video
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-video
  template:
    metadata:
      labels:
        app: webapp-video
    spec:
      containers:
        - name: video-webapp
          image: kodekloud/ecommerce:video
          ports:
            - containerPort: 8080
              protocol: TCP
