nginx-controller/wear-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-wear
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-wear
  template:
    metadata:
      labels:
        app: webapp-wear
    spec:
      containers:
        - name: wear-webapp
          image: kodekloud/ecommerce:apparels
          ports:
            - containerPort: 8080
              protocol: TCP
