nginx-controller/default-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: default-backend-service
  namespace: app-space
spec:
  selector:
    app: default-backend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
