nginx-controller/food-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: food-service
  namespace: app-space
spec:
  selector:
    app: webapp-food
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
