nginx-controller/video-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: video-service
  namespace: app-space
spec:
  selector:
    app: webapp-video
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
