nginx-controller/ingress-res.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ecommerce
  namespace: app-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /wear
            pathType: Prefix
            backend:
              service:
                name: wear-service
                port:
                  number: 8080
          - path: /video
            pathType: Prefix
            backend:
              service:
                name: video-service
                port:
                  number: 8080
          - path: /food
            pathType: Prefix
            backend:
              service:
                name: food-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: default-backend-service
                port:
                  number: 80
